Replace Class#newInstance calls with Constructor#newInstance