@@ -91,6 +91,6 @@ public class OkaeriCliApplication implements OkaeriPlatform {
 
     @SneakyThrows
     public static <T extends OkaeriCliApplication> T run(@NonNull Class<? extends T> type, @NonNull String[] args) {
-        return run(type.newInstance(), args);
+        return run(type.getConstructor().newInstance(), args);
     }
 }
